--- a/LinkedList/makefile
+++ b/LinkedList/makefile
@@ -1,2 +1,7 @@
-program: LinkedList_1.cpp 
-	g++ LinkedList_1.cpp  -o LinkedList
+all: program run
+
+program: LinkedList_1.cpp
+	g++ LinkedList_1.cpp -o LinkedList
+
+run: program
+	./LinkedList
